[package]
name = "theses-fr-dumper"
version = "0.0.1"
authors = ["eonm <eon.mathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="0.9.22"
serde_json = "1.0.44"
clap = "2.33.0"
indicatif = "*"

[profile.release]
opt-level = 3